29/11/23:
-A start on GPU particle system and particle emitter components
-Some utilities like ShaderVariants
-Refactoring and bugfixing

22/11/23:
-Physx material assets, component implementation
-Editor UI changes
-Terrain quadtree fixes to improve chunk seams


20/11/23:
-ACES tonemapping
-Fixed asset manager attempting to load both release and debug precompiled scripts

19/11/23:
-Rough implementation of physx 5.1+ vehicles (currently 4-wheeled car support), will rewrite once engine supports skeletal animation

16/11/23:
-Multi-selection (selection by dragging a box over the screen) in editor
-Ctrl-z (undo) and ctrl-shift-z (redo) support in editor
-General settings menu in editor
-Fixed script member parsing when members are initialized with curly braces or not initialized

14/11/23:
-Fixed terrain AABB generation causing improper culling

13/11/23:
-Physx trigger support and script callbacks
-Physx debug rendering fixes/changes
-Fixed gizmo's not being rendered correctly due to being drawn in the background
-Added base sphere asset
-Fixed input considering pressed keys "held" before the next frame
-Auto script replacement when a script asset is deleted and entities are using it

12/11/23:
-Scripting overhaul, system now more similar to unity/unreal, state management far easier
-Runtime fixes

11/11/23:
-Added runtime exe
-Physics system now updates before scripts

10/11/23:
-Debug menu improvements with ImPlot
-Made debug menu available in core engine

9/11/23:
-Transparent material support, still need to support opacity maps
-Core assets no longer shown in editor
-Fixed material deletion

7/11/23:
-Shader hot reloading

6/11/23:
-Converted engine shaders to use the include system, smaller size and more readable
-Slightly better error messages for shaders

3/11/23:
-C++ style include system for shaders

2/11/23:
-Made a proper GameLayer and exe (currently editor with fractal renderpass) for the fractal game and moved the code out of the base editor