@@ -1,7 +1,5 @@
 #version 460 core
 
-#define PI 3.1415926538
-
 ORNG_INCLUDE "UtilINCL.glsl"
 
 
@@ -139,68 +137,6 @@ vec4 Accumulate(vec3 accum_light, float accum_transmittance, vec3 slice_light, f
 	return vec4(accum_light, accum_transmittance);
 }
 
-float fbm(vec3 p)
-{
-    vec3 q = p;
-    //q.xy = rotate(p.xy, ubo_common.time_elapsed);
-
-    p += (NoiseFog(p * 3.0) - 0.5) * 0.3;
-
-    //float v = nse3d(p) * 0.5 + nse3d(p * 2.0) * 0.25 + nse3d(p * 4.0) * 0.125 + nse3d(p * 8.0) * 0.0625;
-
-    //p.y += ubo_common.time_elapsed * 0.2;
-
-    float mtn = ubo_common.time_elapsed * 0.0001;
-
-    float v = 0.0;
-    float fq = 1.0, am = 0.5;
-    for(int i = 0; i < 6; i++)
-    {
-        v += NoiseFog(p * fq + mtn * fq) * am;
-        fq *= 2.0;
-        am *= 0.5;
-    }
-    return v;
-}
-
-
-vec2 grad(ivec2 z)  // replace this anything that returns a random vector
-{
-	// 2D to 1D  (feel free to replace by some other)
-	int n = z.x + z.y * 11111;
-
-	// Hugo Elias hash (feel free to replace by another one)
-	n = (n << 13) ^ n;
-	n = (n * (n * n * 15731 + 789221) + 1376312589) >> 16;
-
-#if 0
-
-	// simple random vectors
-	return vec2(cos(float(n)), sin(float(n)));
-
-#else
-
-	// Perlin style vectors
-	n &= 7;
-	vec2 gr = vec2(n & 1, n >> 1) * 2.0 - 1.0;
-	return (n >= 6) ? vec2(0.0, gr.x) :
-		(n >= 4) ? vec2(gr.x, 0.0) :
-		gr;
-#endif
-}
-
-float PerlinNoise(vec2 p)
-{
-	ivec2 i = ivec2(floor(p));
-	vec2 f = fract(p);
-
-	vec2 u = f * f * (3.0 - 2.0 * f); // feel free to replace by a quintic smoothstep instead
-
-	return mix(mix(dot(grad(i + ivec2(0, 0)), f - vec2(0.0, 0.0)),
-		dot(grad(i + ivec2(1, 0)), f - vec2(1.0, 0.0)), u.x),
-		mix(dot(grad(i + ivec2(0, 1)), f - vec2(0.0, 1.0)),
-			dot(grad(i + ivec2(1, 1)), f - vec2(1.0, 1.0)), u.x), u.y);
-}
 
 
 void main() {
