@@ -1,5 +1,7 @@
 ORNG_INCLUDE "BuffersINCL.glsl"
 
+#define PI 3.14159265
+
 vec3 WorldPosFromDepth(float depth, vec2 normalized_tex_coords) {
 	vec4 clipSpacePosition = vec4(normalized_tex_coords, depth, 1.0) * 2.0 - 1.0;
 	vec4 viewSpacePosition = PVMatrices.inv_projection * clipSpacePosition;
@@ -10,21 +12,13 @@ vec3 WorldPosFromDepth(float depth, vec2 normalized_tex_coords) {
 }
 
 
-float PHI = 1.61803398874989484820459;  // Φ = Golden Ratio   
-
-float gold_noise(in vec2 xy, in float seed){
-       return fract(tan(distance(xy*PHI, xy)*seed)*xy.x);
-}
-
-float random(vec3 seed) {
-	return fract(sin(dot(seed, vec3(12.9898, 78.233, 45.543))) * 43758.5453);
-}
-
-float random1(float seed)
+float rnd(vec2 x)
 {
-	return fract(sin(seed * 43758.5453));
+    int n = int(x.x * 40.0 + x.y * 6400.0);
+    n = (n << 13) ^ n;
+    return 1.0 - float( (n * (n * n * 15731 + 789221) + \
+             1376312589) & 0x7fffffff) / 1073741824.0;
 }
-
 
 
 
