@@ -91,4 +91,26 @@ namespace ORNG {
 
 		return formatted;
 	}
+
+	void PushMatrixIntoArray(const glm::mat4& m, float* array_ptr) {
+		*array_ptr++ = m[0][0];
+		*array_ptr++ = m[0][1];
+		*array_ptr++ = m[0][2];
+		*array_ptr++ = m[0][3];
+
+		*array_ptr++ = m[1][0];
+		*array_ptr++ = m[1][1];
+		*array_ptr++ = m[1][2];
+		*array_ptr++ = m[1][3];
+
+		*array_ptr++ = m[2][0];
+		*array_ptr++ = m[2][1];
+		*array_ptr++ = m[2][2];
+		*array_ptr++ = m[2][3];
+
+		*array_ptr++ = m[3][0];
+		*array_ptr++ = m[3][1];
+		*array_ptr++ = m[3][2];
+		*array_ptr++ = m[3][3];
+	}
 }
