@@ -1,3 +1,7 @@
+1/12/23:
+-Better random velocity vector generation for particles using IQ's random function
+-Some parameters added to particle emitters
+
 29/11/23:
 -A start on GPU particle system and particle emitter components
 -Some utilities like ShaderVariants
